<resources>
    <string name="app_name">AutismPedia</string>
    <string name="btn_sign_in_with_google">Autentificare cu Google</string>
    <string name="tv_obiecte_necesare">Obiecte necesare</string>
    <string name="et_hint_adauga_introducere_si_obiectele_necesare">Adaugă introducere și obiectele necesare...</string>
    <string name="btn_salveaza">Salvează</string>
    <string name="tv_pasi">Pași</string>
    <string name="et_hint_adauga_pasi">Adaugă pași…</string>
    <string name="tv_distractie_placuta">Distrație plăcută!</string>
    <string name="tv_hello">Bine ați revenit!</string>
    <string name="next">NEXT</string>
    <string name="text_question_title">%1$s \t</string>
    <string name="text_info_title">Autismul</string>
    <string name="text_info_first">\t\tTulburarea de spectru autist (TSA) este o manifestare complexă, asociată cu diferite simptome, care includ deficit persistent în comunicarea și interacțiunea socială, în contexte multiple, și modele de comporta- ment restricționate și repetitive.\n\t\tDeși aspectul copiilor cu autism nu îi deosebește de ceilalti, aceștia comunică, interacționează, se comporta si învață în moduri diferite față de majoritatea celorlaltor copii.</string>
    <string name="text_info_second">\t\tSe poate afirma cu certitudine că nu există o singură cauză care duce la tulburări de spectru autist. Autismul se dezvoltă dintr-o combinație de influențe genetice și negenetice, legate de mediu (infecții virale, medicamente sau complicații în timpul sarcinii, poluanți atmosferici, etc.)</string>
    <string name="text_info_fourth">\t\t*Copiii care au un frate cu tulburare de spectru autist;\n\t\t*Persoanele cu anumite afecțiuni genetice sau cromozomiale, cum ar fi sindromul X fragil sau scleroza tuberoasă;\n\t\t*Administrarea în timpul sarcinii a anumitor medicamente(ca de exemplu, acidul valproic sau talidomida);\n\t\t*Greutatea mică la naștere și complicațiile la naștere\n\t\t*Vârsta parentală mai înaintată a ambilor parinți (> 35 ani la femei și > 40 ani la bărbat)\n\t\t*Sexul copilului - băieții au de 4 ori mai multe șanse de a dezvolta tulburare din spectrul autist comparativ cu fetele.</string>
    <string name="text_info_fifth">\t\tTulburarea de spectru autist este diagnosticată în copilărie, multe din simptomele specifice apărând în jurul vârstei de 2 ani. Părintele remarcă lipsa de contact vizual a copilului, lipsa de răspuns când este strigat sau indiferența față de părinte. Alți copii se pot dezvolta normal în primii 2–3 ani de viață, pentru ca apoi să devina brusc retrași sau să-și piardă abilitățile lingvistice pe care le dobândiseră.</string>
    <string name="text_info_sixth">\t\tFiecare copil cu tulburare de spectru autist are un amestec unic de simptome si un anumit grad de severitate. Simptomele pot varia de la ușoare la severe și adesea se modifică de-a lungul timpului și pot fi mascate de mecanisme compensatorii complexe.</string>
    <string name="text_info_seventh">\t\tDiagnosticul precoce cu inițierea imediată a terapiei sunt importante pentru ameliorarea simptomelor și îmbunatățirea calității vieții copiilor cu autism și a familiilor acestora. Nu exista o analiza care sa diagnosticheze boala. Este diagnosticată exclusiv pe baza observării modului în care copilul vorbește, interacționeaza și acționează în comparație cu alți copii de aceeași vârstă. Medicul psihiatru pediatru diagnostichează autismul urmărind copilul și punând întrebări părinților.\n\t\tCel mai frecvent, autismul tipic este diagnosticat în jurul vârstei de 3 ani, datorită întârzierii limbajului sau dificultăților de integrare a copilului la gradiniță.\n\t\tAcademia Americana de Pediatrie recomandă screeningul pentru tulburări de dezvoltare tuturor copiilor cu vârsta între 18–24 luni.</string>
    <string name="deconectare">Deconectare</string>
    <string name="preference_file_key">com.example.autismpedia.PREFERENCE_FILE_KEY</string>
    <string name="play_sound">Audio</string>
    <string name="stop_sound">Stop</string>
    <string name="superuser_enabled">Administrator</string>
    <string name="game_title">Titlu joc..</string>
    <string name="question_title">Întrebare…</string>
    <string name="add_game">Adaugă joc</string>
    <string name="bun_venit">Bun venit!</string>
    <string name="meet_all_requirements">Adaugă titlu pentru joc și imagine</string>

</resources>